force-app/main/default/objects/Industry_Values__c/Industry_Values__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to find the industries for creating inventory records</description>
    <label>Industry Values</label>
</CustomObject>