force-app/main/default/objects/Industry_Values__c/fields/AppoinmentSet__c.field-meta.xml
<CustomField>
    <fullName>AppoinmentSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appoinment_Set</label>
    <type>Checkbox</type>
</CustomField>