force-app/main/default/objects/Industry_Values__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>It contains  field label</description>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>