force-app/main/default/objects/Industry_Values__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>It will contain the Door Tag Script Survey questions</description>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>