force-app/main/default/objects/Industry_Values__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>It will contain response answer</description>
    <label>Response</label>
    <length>250</length>
    <type>Text</type>
</CustomField>