force-app/main/default/objects/Industry_Values__c/fields/Transfer__c.field-meta.xml
<CustomField>
    <fullName>Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer</label>
    <type>Checkbox</type>
</CustomField>